# make-regular-lattice

./: .gitmodules  CMakeLists.txt  arguments.cpp  arguments.hpp  main.cpp
src/: CMakeLists.txt  arguments.cpp  arguments.hpp  data.cpp  data.hpp  log.hpp  main.cpp  maker.cpp  maker.hpp
test/: CMakeLists.txt  inclined-plain.csv  irregular_data_three_corners.csv  irregular_data_with_corners.csv
tests/: CMakeLists.txt  empty.csv  gtests.cc  irregular_lattice.csv  irregular_lattice_no_header.csv  plot.py  zero-plain.csv
